@@ -1,3 +1,4 @@
+// Copyright 1999-2014 CALI, The Center for Computer-Assisted Legal Instruction. All Rights Reserved.
 // CALI Viewer 5, Version: 03/15/2012
 // CALI Author Viewer - Scoring
 
@@ -459,4 +460,4 @@ function Sliders_ShowText(val)//Return caption for slider
 	}
 	return "<font color=green><b>" + txt + "</b></font>"
 }
-
+//
