@@ -1047,7 +1047,7 @@ div.UserName {
 	color: #f00;
 }
 .map   .line {
-	background-color: #000;
+	background-color: #0f0;
 	border: 1px #000;
 	position: absolute;
 }
