@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
-<!-- // CALI Viewer 5, Version: 06/07/2012
-Copyright 1999-2012 CALI, Center for Computer-Assisted Legal Instruction. All Rights Reserved. -->
+<!-- // CALI Viewer 5, Version: 09/12/2014
+Copyright 1999-2014 CALI, The Center for Computer-Assisted Legal Instruction. All Rights Reserved. -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
 <title>CALI Viewer 5 - Center for Computer-Assisted Legal Instruction</title>
@@ -17,7 +17,7 @@ runid="";
 username="";
 amode=0;
 dispName="Student";
-orgName="CALI DVD 2012";
+orgName="CALI DVD 2014";
 var resumeScoreURL="";
 </script>
 <!--Mode.END-->
@@ -36,6 +36,7 @@ var resumeScoreURL="";
 <script src="jQuery/jquery.qtip-1.0.0-rc3.min.js" type="text/javascript"></script>
 <script src="jQuery/flowplayer/flowplayer-3.2.6.min.js" type="text/javascript"></script>
 <script src="jQuery/jqprint.0.3.js" type="text/javascript"></script>
+<script src="CAV_types.js?16" id="CAVjs" type="text/javascript"></script>
 <script src="CAV.js?16" id="CAVjs" type="text/javascript"></script>
 <script src="CAV_mapper.js" id="CAVjs" type="text/javascript"></script>
 <script src="CAV_layout.js?16" id="CAVjs" type="text/javascript"></script>
